--- a/templates/header.html
+++ b/templates/header.html
@@ -231,7 +231,7 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar">
           <div class="offcanvas-header px-4 pb-0">
-            <a class="navbar-brand ps-3" href="index.html">
+            <a class="navbar-brand ps-3" href="/">
               <img src="images/main-logo.png" class="logo" alt="logo">
             </a>
             <button type="button" class="btn-close btn-close-black p-5" data-bs-dismiss="offcanvas" aria-label="Close"
@@ -240,7 +240,7 @@
           <div class="offcanvas-body">
             <ul id="navbar" class="navbar-nav fw-bold justify-content-end align-items-center flex-grow-1">
               <li class="nav-item dropdown">
-                <a class="nav-link me-5 active dropdown-toggle border-0" href="#" data-bs-toggle="dropdown"
+                <a class="nav-link me-5 active dropdown-toggle border-0" href="/" data-bs-toggle="dropdown"
                   aria-expanded="false">Home</a>
               </li>
               <li class="nav-item">
