--- a/templates/header.html
+++ b/templates/header.html
@@ -256,6 +256,9 @@
               <li class="nav-item">
                 <a class="nav-link me-5" href="#">Register</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link me-5" href="view_cart">View Cart</a>
+              </li>
             </ul>
           </div>
         </div>
