--- a/templates/header.html
+++ b/templates/header.html
@@ -50,7 +50,7 @@
               </li>
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link me-5" href="view_cart">View Cart</a>
+                <a class="nav-link me-5" href="/view_cart">View Cart</a>
               </li>
                <li class="nav-item">
               <a class="nav-link me-5" href="#">Hi {{ user.first_name }}</a>
