--- a/templates/login_register/login.html
+++ b/templates/login_register/login.html
@@ -1,5 +1,5 @@
 {% include 'header.html' %}
-
+{% load socialaccount %}
 <body>
   <style>
     .login-container {
@@ -65,6 +65,8 @@
         <input type="password" name="password" id="password" required>
       </div>
       <button type="submit">Login</button>
+      <a href="{% provider_login_url 'google' %}?next=/">Login with Google</a>
+
     </form>
   </div>
 </body>
