--- a/templates/login_register/register.html
+++ b/templates/login_register/register.html
@@ -76,7 +76,9 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
       </div>
-      <button type="submit" class="btn">Login</button>
+      <div class="g-recaptcha" data-sitekey="6Ld0QAwrAAAAAJv37um6cIc_yJTxlS-L222X8pCp"></div>
+      <button type="submit" class="btn">Register</button>
     </form>
   </div>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </body>
